# cmake_demo

./: C.txt  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  person.cpp  person.h
test/: CMakeLists.txt  person_test.cpp
